--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html ng-app="mainApp" xmlns="http://www.w3.org/1999/html">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <head>
-    <title>Gestão de RC</title>
+    <title>Gestão de Eventos</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="/bower_components/ag-grid/dist/angular-grid.min.css">
     <link rel="stylesheet" href="/bower_components/ag-grid/dist/theme-fresh.min.css">
