--- a/views/scripts/includeDEVELOP.ejs
+++ b/views/scripts/includeDEVELOP.ejs
@@ -1,23 +1,19 @@
 <script src="/controllers/mainApp.js"></script>
-<script src="/controllers/mainController.js"></script>
 <script src="/controllers/usersController.js"></script>
-<script src="/controllers/budgetController.js"></script>
-<script src="/controllers/backlogController.js"></script>
-<script src="/controllers/recursosController.js"></script>
-<script src="/controllers/tarefasController.js"></script>
-<script src="/controllers/projectosController.js"></script>
-<script src="/controllers/oportunidadeController.js"></script>
+<script src="/controllers/sessoesController.js"></script>
+<script src="/controllers/participantesController.js"></script>
+<script src="/controllers/speakersController.js"></script>
+<script src="/controllers/eventosController.js"></script>
 <script src="/modals/popToConfirmController.js"></script>
 <script src="/modals/confirmFileController.js"></script>
 <script src="/modals/spinnerController.js"></script>
-<script src="/services/backlog.services.js"></script>
-<script src="/services/projectos.services.js"></script>
 <script src="/services/modal.services.js"></script>
-<script src="/services/recursos.services.js"></script>
-<script src="/services/budget.services.js"></script>
 <script src="/services/user.services.js"></script>
+<script src="/services/eventos.services.js"></script>
+<script src="/services/participantes.services.js"></script>
+<script src="/services/speakers.services.js"></script>
+<script src="/services/sessoes.services.js"></script>
 <script src="/services/file.services.js"></script>
-<script src="/services/oportunidades.services.js"></script>
 <script src="/directives/changeDirective.js"></script>
 <script src="/directives/fileDirective.js"></script>
 <script src="/libs/spin.min.js"></script>
