--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,10 +54,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
 
-<% if (env === "production") { %>
+<% if (env === "xproduction") { %>
     <% include ./scripts/includePROD %>
 <% } %>
-<% if (env != "production"){ %>
+<% if (env != "xproduction"){ %>
     <% include ./scripts/includeDEVELOP %>
 <% }%>
 
