--- a/assets/stylesheets/style.less
+++ b/assets/stylesheets/style.less
@@ -191,3 +191,7 @@ and (max-device-width : 568px) {
   max-height: calc(~"100vh - 212px");
   overflow-y: auto;
 }
+
+.speaker-table{
+  height:60vh;
+}
